# fixed_math

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  fixed_math.kdev4  git_tag.sh  index.md  remove_git_tag.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
CMakeModules/: get_fixed_math_version.cmake
docs/: addition.md  aplication.md  bitwise_operations.md  conversion_between_fixed_and_arithmetic.md  division.md  fixed_t.md  index.md  multiplication.md  sine.md  subtraction.md
examples/: CMakeLists.txt  brief-usage.cc  iostream.cc  iostream_example.cpp  string_conversion.cc  string_conversion_example.cpp
fixed_lib/: CMakeLists.txt  fixed_mathConfig.cmake
fixed_lib/include/: fallthrough.h  fixed_math.hpp  pragmas.h  utility_cxx20.h
fixed_lib/include/fixedmath/: compile_time_unit_tests.h  core_ops.h  fixed_math.hpp  fixed_string.h  iostream.h  limits.h  math.h  numbers.h  optional_std_imports.h  std_formatter.h  types.h  utility_cxx20.h
fixed_lib/include/fixedmath/detail/: common.h  static_call_operator_epilog.h  static_call_operator_prolog.h  type_traits.h  utility_cxx20.h
fixed_lib/include/fixedmath/unittests/: addition.h  atan.h  compile_time_unit_tests.h  division.h  fixed_construction.h  floating_point_type_convertions.h  integral_type_convertions.h  misc_functions.h  multiplication.h  sin.h  sqrt.h  substraction.h  tan.h  type_traits.h  unit_test_common.h
fixed_lib/mca_analisis/: CMakeLists.txt  asin.cc  asin.s  asin.txt  atan.cc  atan.s  atan.txt  sin.cc  sin.s  sin.txt  sqrt.cc  sqrt.s  sqrt.txt  tan.cc  tan.s  tan.txt
fixed_lib/src/: cos_angle_table.h  fixed_math.cc  sin_angle_table.h  square_root_table.h  tan_table.h
perf_test_suite/: CMakeLists.txt  perf.cc
table_gen/: CMakeLists.txt  table_gen.cc
unit_tests/: CMakeLists.txt  addition_ut.cc  atan_ut.cc  division_ut.cc  fixed_construction_ut.cc  fixed_string_unittest.cc  hypot_not_abacus.cc  integral_type_convertions_ut.cc  misc_functions_ut.cc  modulo_ut.cc  multiplication_ut.cc  sin_cos_ut.cc  sqrt_ut.cc  string_convertion_ut.cc  subtraction_ut.cc  tan_ut.cc  type_convertions_ut.cc
unit_tests/include/: atan.h  boost_ut.h  division.h  fixed_construction.h  floating_point_type_convertions.h  integral_type_convertions.h  substraction.h  type_traits.h  unit_test_common.h  unit_test_core.h
